--- a/export/web/CellularAutoBata.html
+++ b/export/web/CellularAutoBata.html
@@ -38,7 +38,7 @@ body {
 }
 
 #status {
-	background-color: #2d2931;
+	background-color: #000000;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -92,7 +92,11 @@ body {
 		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="CellularAutoBata.icon.png" />
 <link rel="apple-touch-icon" href="CellularAutoBata.apple-touch-icon.png"/>
-
+<style>
+#status-progress {
+	accent-color: #8a009a;
+}
+</style>
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -104,14 +108,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" class="show-image--false fullsize--true use-filter--true" src="CellularAutoBata.png" alt="">
+			<img id="status-splash" class="show-image--true fullsize--false use-filter--true" src="CellularAutoBata.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
 		<script src="CellularAutoBata.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"CellularAutoBata","experimentalVK":false,"fileSizes":{"CellularAutoBata.pck":2638960,"CellularAutoBata.wasm":43651929},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"CellularAutoBata","experimentalVK":false,"fileSizes":{"CellularAutoBata.pck":2888064,"CellularAutoBata.wasm":43651929},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
